# ai_singer_web

./: README.md  pyproject.toml
src/ai_singer_web/: run.py
tests/: t.py
